@@ -1,7 +1,5 @@
-DIST maven-artifact-2.1_pre20070603.tar.bz2 106140 RMD160 a251427cdb2974eb04a488a7d22d39837f41aa75 SHA1 f5120b9aaaf4878296a93175e68efae1b2a9c66c SHA256 2577237c6bdae8f66e10940ec50ec17aa98d7390fba8034f37c69320d8a0669d
-DIST maven-artifact-gen-src-2.1_pre20070603.tar.bz2 7194 RMD160 5857ced7801ca59eb28551193821cfbfcdd19bd5 SHA1 3b8bf23716ee10ae361e82770d6872df3b167f24 SHA256 69b90d6125f775611e985999df0ce6cf86cfe91ff910378861badd030f8d846e
-EBUILD maven-artifact-2.1_pre20070603.ebuild 763 RMD160 2db790f456b198bbefcac475152daa9037eeff08 SHA1 251b886238588afbd634988aa04e957a4e38f26d SHA256 4507d889fc118f7ce2874138f038cd1b15f83d8153708449197c2fe8ca0e2911
-MISC ChangeLog 679 RMD160 b992bdf3f297763f41deae92b464a5d6ac561399 SHA1 f06162e80b19d493459faa695ebb31a83d8f9551 SHA256 ae99676fc769de55263ce98ca321abf40d7003b8e863d077b9abf2e6bdaeaef8
-MISC maven-artifact-2.1_pre20070603.tar.bz2 106140 RMD160 a251427cdb2974eb04a488a7d22d39837f41aa75 SHA1 f5120b9aaaf4878296a93175e68efae1b2a9c66c SHA256 2577237c6bdae8f66e10940ec50ec17aa98d7390fba8034f37c69320d8a0669d
+DIST maven-artifact-2.1_pre20070611-gen-src.tar.bz2 7193 RMD160 4c72a6caf8a764ea739083546caca7b2acb67069 SHA1 3e13f6cc01c5fb8771be83ea3569e53e4f1cd3e4 SHA256 24b28c7a456bf38b743e34acd8c5db8fb62dd212548eeba5e0bd100e1b916d76
+DIST maven-artifact-2.1_pre20070611.tar.bz2 89690 RMD160 c25f8a570858196cc23ab0fd8deaaa970ea82ac8 SHA1 4fa97ec6ec7f53daa0cd1ee223a1fce88149881f SHA256 99b87e7efa825996e68685899ed11807116d06dec55521eb52939c7e192efb67
+EBUILD maven-artifact-2.1_pre20070611.ebuild 882 RMD160 b52ee86111d2a04beb1d61175d65f1942cf4d6bb SHA1 7fddd764fe874b1f61f7fd3e784bd5bf4d69b839 SHA256 5bb54a388f6b5639a516c49572e69c556a1e7e495f30a400b265efecbfa91576
+MISC ChangeLog 827 RMD160 b2e2572413fd75d8ca3ecd9462350fedf6e2a48e SHA1 8ee5ca2525658eb2677972597bc047d1eca0d389 SHA256 3036e4f0793f6ee8152d4dc2f6f25e51247bd96b3d037345162a86025b2918aa
 MISC metadata.xml 157 RMD160 ab0b3741457dee7531f59c4da0f0e9e8399af084 SHA1 c37a6b9922aef61b5b3387655bccb6e3b16e0e26 SHA256 295d02c5805b0257938eb80314b371daac94b8d6ea85629a902de7a824adc0c9
-MISC pom.xml 9122 RMD160 81d126aeb2c26d41d1ef5b013e74f21d77f06d57 SHA1 8f7bfe2ac58223584fabc6c29bd310fae379974f SHA256 c370853144871bbe4924515e19f20df52c57597935f3c994dd20a9ba93102353
